--- a/index.ipynb
+++ b/index.ipynb
@@ -435,29 +435,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f80cdeabfd0>"
+       "<folium.map.Marker at 0x7f80cdeabf98>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighborhood_markers.pop()"
+    "neighborhood_markers.pop(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(neighborhood_markers)) # 5\n",
     "print(neighborhood_markers[-1] == marker_five) # True"
